# shiny-handouts

./: .env.example  .gitignore  .lefthook.yml  AGENTS.md  CODE_REVIEW.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  SETTING_PROFILES_FEATURE.md  STORAGE_MIGRATION.md  admin.py  ai.py  app.py  auth.py  cache.py  celery_app.py  cli.py  config.py  docker-compose.override.yml  docker-compose.yml  helpers.py  main.py  manage.py  migrations.py  models.py  nice.py  nice_public.py  oauth.py  plan.md  process.py  prompt.md  pyproject.toml  requirements-dev.txt  requirements.txt  routes.py  schema.json  spec.md  startup.py  state.py  (+4 more)
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
components/: files.py  generate.py  tasks.py
docs/: AI_TRACKING.md
instance/: shiny_handouts.db
migrations/versions/: fb21b429bb2c_.py
pages/: __init__.py  index.py
pipeline/: ai.py  cache.py  helpers.py  pipeline.py  process.py  schemas.py
prompts/: default_spreadsheet_columns.json  gen_keypoints.md  generate_spreadsheet.md
rsconnect-python/: shiny-handouts.json
scripts/: panopto_test.py  recover_jobs.py  test_match_frames.py  test_s3_head_object.py  test_vignette_pdf.py
src/: manage.py  requirements.txt
src/accounts/: __init__.py  adapter.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_usersettings.py  0003_remove_is_admin.py  0004_settingprofile.py  0005_remove_usersettings.py  0006_add_mindmap_support.py
src/accounts/templates/accounts/: login.html  profile_form.html  profiles.html  settings.html
src/core/: __init__.py  admin.py  analytics.py  apps.py  cache.py  exceptions.py  middleware.py  models.py  storage.py  taskiq_app.py  tasks.py  timezone_middleware.py
src/core/migrations/: 0001_initial.py  0002_job_output_settings.py  0003_alter_job_status.py  0004_job_setting_profile.py  0005_add_mindmap_support.py  0006_remove_artifact_lecture_artifact_job_job_source_id_and_more.py  0007_airequest.py  0008_job_jobs_user_id_c7da17_idx_and_more.py  __init__.py
src/core/tasks/: __init__.py  config.py  context.py  db.py  frames.py  pipeline.py  progress.py  video.py
src/core/tasks/stages/: __init__.py  video.py  (+6 more)
src/core/templatetags/: analytics_filters.py
src/core/urls/: __init__.py  admin.py  analytics.py  api.py  main.py
src/core/views/: admin.py  analytics.py  api.py  main.py
src/handout_generator/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/pipeline/: __init__.py  ai.py  helpers.py  image_extraction.py  schemas.py
src/prompts/: clean_transcript.md  default_spreadsheet_columns.json  generate_mindmap.md  generate_spreadsheet.md  generate_title.md  generate_vignette_questions.md
src/static/css/: styles.css
src/static/js/: mindmap-utils.js
src/templates/: base.html  index.html  job_mindmaps.html  lecture_mindmaps.html  mindmap.html
src/templates/admin/: dashboard.html  job_detail.html  jobs.html  lecture_detail.html  lectures.html  user_detail.html  users.html
src/templates/analytics/: dashboard.html
src/templates/partials/: artifact_list.html  bug_report_error.html  bug_report_success.html  error.html  file_browser.html  job_card.html  job_list.html  job_title.html  lecture_title.html  mindmap_theme_selector.html  output_options.html  spreadsheet_columns.html
src/templates/pdf/: vignette.html
static/css/: styles.css
templates/: template-html.html  template.html  vignette.html
templates/flask/: base.html  index.html  login.html
templates/flask/admin/: dashboard.html  job_detail.html  jobs.html  lecture_detail.html  lectures.html  user_detail.html  users.html
templates/flask/partials/: artifact_list.html  file_browser.html  job_card.html  job_list.html
(+3 files in other folders)
