[project]
name = "shiny-handouts"
version = "0.1.0"
description = "Lecture handout generator with Flask, Celery, and AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "authlib>=1.3.0",
    "celery>=5.3.0",
    "chatlas>=0.15.0",
    "click>=8.1.0",
    "flask>=3.0.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.0.5",
    "flask-sqlalchemy>=3.1.0",
    "gunicorn>=21.0.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "m3u8>=4.0.0",
    "openai>=1.0.0",
    "opencv-python>=4.9.0",
    "openpyxl>=3.1.0",
    "pandas>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.11.3",
    "pydub>=0.25.1",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "scikit-image>=0.22.0",
    "sqlalchemy>=2.0.0",
    "xhtml2pdf>=0.2.11",
]

[dependency-groups]
dev = [
    "lefthook>=1.11.12",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "types-authlib>=1.6.0.20250809",
    "types-oauthlib>=3.3.0.20250809",
]
